	 partially redesigned the debugger window to make the structure similar
	 to gtk ui, implemented monospaced font code, which is used by debugger
	 only for now (Marek).
20080810 ui/win32/win32ui.c: Win32: modified the procedure preventing to draw
	 the mouse cursor if it's 'grabbed' to explictly call default window
	 procedure if the the mouse cursor is not grabbed, to avoid any
	 confussion (Marek).
20080810 ui/win32/{win32ui.c,debugger.c,win32internals.h}: Win32: fixed the
	 pause/unpause routines by introducing win32ui_process_messages - an
	 equivalent of gtk's gtk_main (Marek).
20080810 ui/win32/{options,options-resource,options-header}.pl: Win32: renamed
	 options dialogs from IDG_* to IDD_* to follow the naming convention
	 (Marek).
20080811 ui/win32/memorybrowser.c: Win32: made the memory browser dialog use
	 the win32ui_get_monospaced_font function (Marek).
20080812 configure.in: Win32: Added version requirement for DirectX sound
	 interface. The module needs version DirectX 7 or higher. This also
	 stops all the redefinition errors happening without this requirement
	 (Marek).
20080815 disk/disk.c: add sanity checks for disk geometry (fixes bug #2051291)
         (Gergely Szasz).
20080815 input.[ch],ui/sdl/sdljoystick.c,ui/svga/svgajoystick.c,
         ui/uijoystick.c,ui/widget/{browse.c,filesel.c,menu.c,options.pl,
         picture.c,query.c,select.c}: unify input_joystick_button and input_key
         and allow widget UI to be controlled by joystick (Fred).
20080818 z80/coretest.c: don't abort on startup.
20080819 settings.dat,input.c,ui/win32/win32joystick.c,ui/gtk/gtkjoystick.c:
	 Added ability to define the keyboard joystick emulation keys (Marek).
20080819 sound/dxsound.c: Win32 DirectX sound: Added static keyword where
	 applicable (Marek).
20080819 sound/win32sound.c: Win32 mmsystem sound: Added support for 8 bit
	 sound, applied static keyword where applicable, applied coding style
	 fixes (Marek).